# catch2_android

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/unit_tests/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  rebuild.sh
app/src/main/cpp/modules/bar/: CMakeLists.txt  bar.cpp
app/src/main/cpp/modules/foo/: CMakeLists.txt  foo.cpp
app/src/main/cpp/shared_modules/: CMakeLists.txt  linker_script.ld  runner.cpp  test_discovery.cpp
app/src/main/cpp/shared_modules/bar/: CMakeLists.txt  bar.cpp
app/src/main/cpp/shared_modules/foo/: CMakeLists.txt  foo.cpp
app/src/main/cpp/static_modules/: CMakeLists.txt  runner.cpp
app/src/main/cpp/static_modules/bar/: CMakeLists.txt
app/src/main/cpp/static_modules/foo/: CMakeLists.txt  foo.cpp
app/src/main/java/com/example/unit_tests/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
